--- a/package.json
+++ b/package.json
@@ -26,16 +26,22 @@
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
-        "pretest": "npm run compile && npm run lint",
+        "pretest": "npm run compile",
         "lint": "eslint src --ext ts",
         "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
-        "@types/vscode": "^1.96.0",
-        "@types/node": "20.x",
         "@types/markdown-it": "^12.2.3",
-        "typescript": "^5.3.3",
-        "eslint": "^8.56.0"
-    },
-    "dependencies": {}
+        "@types/mocha": "^10.0.10",
+        "@types/node": "20.x",
+        "@types/vscode": "^1.96.0",
+        "@typescript-eslint/eslint-plugin": "^8.51.0",
+        "@typescript-eslint/parser": "^8.51.0",
+        "@vscode/test-electron": "^2.5.2",
+        "eslint": "^8.56.0",
+        "glob": "^13.0.0",
+        "markdown-it": "^14.1.0",
+        "mocha": "^11.7.5",
+        "typescript": "^5.3.3"
+    }
 }
